[package]
name = "gdpr-consent-string"
version = "0.1.0"
authors = ["Mark Sherry <mdsherry@gmail.com>"]

[dependencies]
bitmask = "0.4"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"

lalrpop-util = "0.15.1"
regex = "0.2.0"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.15.1"